# confidoc

./: .dockerignore  .gitignore  AUTHSPEC.md  CLAUDE_LLM_EXPORT_PACKAGE.md  CLAUDE_SERVER_TAB_SOURCE_INGEST.md  DEV.md  Dockerfile  IMPLEMENTATION.md  LocalFolderConnector.md  NEXT_STAGE.md  POLICYFEATURE.md  POLICY_ENGINE.md  RENDER.md  TODO.md  USAGE.md  ZONE1plus.md  pyproject.toml  render.yaml
app/: config.py  main.py
app/api/: gateway.py  gateway_sftp.py  reports.py  server_sources.py  user_settings.py
app/auth/: cli.py  middleware.py  routes.py  sessions.py  users.py
app/connectors/: __init__.py  base.py  github_connector.py  sftp_connector.py  webdav_connector.py
app/pipeline/: anon.py  anon_llm.py  audit.py  export.py  ingest.py  ocr_check.py
app/policy_engine/: audit.py  engine.py  models.py  package.py  profiles.py  risk.py  strictness.py  transformer.py  usefulness.py
app/report_engine/: __init__.py  assets.py  directives.py  html_renderer.py  models.py  pdf_exporter.py  theme.py
app/review_ui/: routes.py
app/services/: demo_capture.py  docx_export.py  gateway_local.py  gateway_sftp.py  ingest_registry.py  llm_adapter.py  local_ocr.py  prompt_loader.py  rehydrate_parser.py  source_config_loader.py  source_ingest_service.py  user_settings.py  xliff_export.py
app/storage/: audit_log.py  jobs.py  learning.py  mappings.py
data/: approved_terms.unsafe.backup.jsonl
data/auth/: users.example.json  users.json
data/demo/: gynecologyreport_de.txt
data/demo_runs/: sessions.json
data/llm_export_prompts/: 01_summarize_100_words.md  02_translate_to_english.md  03_check_condition.md  (+3 more)
docs/: byok_confidoc_integration.md
profiles/: clinical_summary.yaml  ml_feature_extraction.yaml  public_release.yaml  research_extract.yaml  translation.yaml
tests/: test_byok_integration.py  test_privacy_guardrail.py
(+36 files in other folders)
