[project]
name = "confidoc"
version = "0.1.0"
description = "Secure document pipeline with anonymization review and translation export"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.44.0",
    "pydantic>=2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "pyyaml>=6.0.3",
    "cryptography>=43.0.0",
    "openai>=1.0.0",
    "cogtrix-byok",
    "pdf-to-markdown",
    "python-docx>=1.2.0",
]

[tool.uv]
package = true

[tool.uv.sources]
cogtrix-byok = { path = "vendor/cogtrix_byok" }
pdf-to-markdown = { path = "vendor/pdf-to-markdown" }

[project.scripts]
confidoc = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
